k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic-app-service
  namespace: learning
spec:
  selector:
    app: basic-app

  ports:
    - port: 80
      targetPort: 3001

  type: ClusterIP
